spargen/tests/snapshots/diff__open_narrowing_meets_the_same_set_in_every_member_order-5.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|type-kind-changed|ResponseBodykindMember0|type kind `alias` -> `enum`
major|type-kind-changed|ResponseBodykindMember1|type kind `enum` -> `alias`
bump=major
