spargen/tests/snapshots/diff__open_narrowing_meets_the_same_set_in_every_member_order-6.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|type-removed|ResponseBodykindMember1|public type removed
minor|type-added|ResponseBodykindMember0|new public type
bump=major
