spargen/tests/snapshots/diff__open_narrowing_meets_the_same_set_in_every_member_order-9.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|type-kind-changed|ResponseBodykindMember1|type kind `enum` -> `alias`
minor|type-added|ResponseBodykindMember2|new public type
bump=major
