spargen/tests/snapshots/diff__removed_field_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|field-removed|Pet.name|field removed (was `String`)
bump=major
