spargen/tests/snapshots/diff__removed_operation_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|operation-removed|GET /owners|operation removed
bump=major
