spargen/tests/snapshots/diff__removing_a_parameter_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|param-removed|GET /pets param `limit` (query)|parameter removed (was `i64`)
bump=major
