spargen/tests/snapshots/diff__removing_a_request_body_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|request-body-removed|GET /pets|request body removed (was `Pet`)
bump=major
