spargen/tests/snapshots/diff__renaming_a_keyword_named_operation_and_field_is_still_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|method-renamed|GET /pets|method renamed `r#gen` -> `generate`
major|field-removed|Pet.r#type|field removed (was `String`)
minor|field-added|Pet.kind|optional field added: `String`
bump=major
