spargen/tests/snapshots/diff__renaming_an_operation_id_renames_the_method_and_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|method-renamed|GET /pets|method renamed `list_pets` -> `fetch_pets`
bump=major
